# rpc-server-benchmarker

./: .gitignore  Makefile  README.md  api.proto  book-large-content.txt  build-ts.sh  tests.txt
benchmarker/: api.ts  package-lock.json
benchmarker-rs/: Cargo.toml  build.rs
benchmarker-rs/src/: main.rs
benchmarker-ts/: index.ts  package-lock.json  package.json
rs-server/: Cargo.toml  build.rs
rs-server/src/: lib.rs  main.rs
rs-server/src/codegen/: server.rs
rs-server/src/service/: book_service.rs
ts-server/: index.ts  package-lock.json  package.json
