[package]
name = "benchmarker-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.25.0", features = ["full"] }
prost = "0.11.5"
async-trait = "0.1.57"
streaming-stats = "0.2.3"
dcl-rpc = "1.0.0"


[build-dependencies]
prost-build = "0.11.5"
dcl-rpc = "1.0.0"
