[package]
name = "rs-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rpc-rust = { path = "./rpc-rust/rpc" }
tokio = { version = "1.25.0", features = ["full"] }
async-trait = "0.1.57"
prost = "0.11.5"


[build-dependencies]
prost-build = "0.11.5"